Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:66:18: error: 'ball1' was not declared in this scope
         DrowBall(ball1);
                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:71:22: error: 'x1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:71:32: error: 'vx1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:71:38: error: 'vy1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:71:47: error: 'r1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:42:10: warning: unused variable 'bal1' [-Wunused-variable]
     Ball bal1 = { rand() % W,  rand() % H,
          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void Physics2Ball(int*, int*, int*, int*, int*, int*, int*, int*, int*, int*, int)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:175:28: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
             float Dx = *x1 - *x2; // стороны треугольника
                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:176:28: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
             float Dy = *y1 - *y2; // стороны треугольника
                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:177:41: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
             float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:177:53: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
             float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:177:58: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
             float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                                          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:183:34: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn1 = *vx2*sin + *vy2*cos; //поворот системы координат шар1
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:183:45: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn1 = *vx2*sin + *vy2*cos; //поворот системы координат шар1
                                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:184:34: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn2 = *vx1*sin + *vy1*cos; //поворот системы координат шар2
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:184:45: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn2 = *vx1*sin + *vy1*cos; //поворот системы координат шар2
                                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:185:35: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt1 = -*vx2*cos + *vy2*sin; //поворот системы координат шар1
                                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:185:46: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt1 = -*vx2*cos + *vy2*sin; //поворот системы координат шар1
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:186:35: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt2 = -*vx1*cos + *vy1*sin; //поворот системы координат шар2
                                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:186:46: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt2 = -*vx1*cos + *vy1*sin; //поворот системы координат шар2
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:192:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vx1 = Vn2*sin - Vt2*cos; //обратный поворот системы координат шар1
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:193:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vy1 = Vn2*cos + Vt2*sin; //обратный поворот системы координат шар1
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:194:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vx2 = Vn1*sin - Vt1*cos; //обратный поворот системы координат шар2
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:195:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vy2 = Vn1*cos + Vt1*sin; //обратный поворот системы координат шар2
                                ^
---------------------------------------------------------------------------------------------
[11.06.2021  7:56:09,45 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
